Add connection string

--- a/src/MongoDotNet.API/appsettings.json
+++ b/src/MongoDotNet.API/appsettings.json
@@ -1,9 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionString": "mongodb+srv://mongo-course:mongo-course@cluster0.mmqumjh.mongodb.net/?retryWrites=true&w=majority",
+    "NomeBanco": "mongo-course"
 }
